# day08-e403-group101

./: README.md
group_project/: .env.example  dump_chunks.py  requirements.txt
group_project/data/: chunks_export.json  golden_dataset.json  golden_dataset.json.json
group_project/group_project/: README.md
group_project/src/: task5_semantic_search.py  task6_lexical_search.py  task9_retrieval_pipeline.py
personal_project/2A202600681-NguyenTienSi/: requirements.txt
personal_project/2A202600787-NguyenBachHaiDang/: app.py
personal_project/2A202600902-PhamTuanAnh/: pyproject.toml
personal_project/2A202600902-PhamTuanAnh/data/landing/news/: article_05_20-nam-hoat-dong-cua-miu-le-truoc-khi-bi-bat-qua-tang-dung-ma-tuy-5072922.json  article_06_chua-day-1-thang-3-nghe-si-viet-bi-khoi-to-vi-lien-quan-ma-tuy-gay-chan-dong-pos.json
personal_project/2A202600902-PhamTuanAnh/data/standardized/news/: article_01_ca-si-chau-viet-cuong-hau-toa-vi-nhet-toi-hai-chet-co-gai-20-tuoi-3890738.md  article_03_bat-nguoi-mau-an-tay-ca-si-chi-dan-co-tien-truc-phuong-do-lien-quan-ma-tuy-20241.md  article_05_20-nam-hoat-dong-cua-miu-le-truoc-khi-bi-bat-qua-tang-dung-ma-tuy-5072922.md
personal_project/2A202600902-PhamTuanAnh/group_project/: README.md
personal_project/2A202600902-PhamTuanAnh/src/: config.py  task10_generation.py  task1_collect_legal_docs.py  task2_crawl_news.py  task3_convert_markdown.py  task4_chunking_indexing.py  task5_semantic_search.py  task6_lexical_search.py  task7_reranking.py  task8_pageindex_vectorless.py  task9_retrieval_pipeline.py
(+90 files in other folders)
